--- a/Mslc/Cargo.toml
+++ b/Mslc/Cargo.toml
@@ -7,5 +7,7 @@ members  = [
 
 
 [workspace.dependencies]
-num   = "0.4.3"
-types = { path = "types" }
+num       = "0.4.3"
+regex     = "1.10.5"
+once_cell = "1.19.0"
+types     = { path = "types" }
