--- a/Mslc/lexer/Cargo.toml
+++ b/Mslc/lexer/Cargo.toml
@@ -10,5 +10,7 @@ path = "src/lib.rs"
 
 
 [dependencies]
-num   = { workspace = true }
-types = { workspace = true }
+num       = { workspace = true }
+regex     = { workspace = true }
+types     = { workspace = true }
+once_cell = { workspace = true }
